--- a/index.html
+++ b/index.html
@@ -11,4 +11,5 @@
   </bm-root>
 <script src="runtime.71a917118298c5d1.js" type="module"></script><script src="polyfills.6a7ac94e5a103099.js" type="module"></script><script src="main.80c6e4a6c964ed15.js" type="module"></script>
 
-</body></html>
+</body>
+</html>
